# pam_tpm_ecc

./: CMakeLists.txt  Cargo.toml  PKGBUILD  README.md
.cargo/: config.toml
src/: CMakeLists.txt  args.rs  crypto.rs  lib.rs  pam_tpm_ecc.c  pubkey.rs  secure.rs  tpm.rs
test/: CMakeLists.txt  README.md  pam_tpm_ecc.sh  test.sh  test_verify.c  tpm_sign_test.c
test/integration/: hardware.sh  ibmswtpm2.sh
test/lib/: common.sh
